REFACTOR: Packages changes to eliminate known dep vulnerabilities
TWEAK: Downgrade @hashgraph/sdk due to vun
TWEAK: Use copyfiles over cpx as it isn't maintained

--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "test:unit": "NODE_ENV=test mocha --recursive --parallel test/unit/**/*",
     "test:e2e": "NODE_ENV=test node test/before-e2e.js && echo \"Running BJS in Install Mode.\" && NODE_ENV=test INSTALL_MODE=true ./bin/app.sh && echo \"Install Complete.\\n\"&& NODE_ENV=test TEST_ENV=e2e mocha --recursive --bail test/e2e/index.test.js",
     "clean": "rimraf dist/*",
-    "build": "npm run clean && npm run build-ts && npm run build-copy-non-ts",
+    "build": "npm run clean && npm run build-ts && npm run build-non-ts",
     "build-ts": "tsc",
-    "build-copy-non-ts": "cpx 'src/**/*.!(ts)' dist",
-    "watch": "npm run clean && concurrently -k -n 'TS,Non-TS' -c 'bgBlue.bold,bgMagenta.bold' 'npm run watch-ts' 'npm run watch-non-ts'",
+    "build-non-ts": "copyfiles -V -u 1 'src/**/*.!(ts)' dist",
+    "watch": "npm run clean && npm run watch-non-ts & npm run watch-ts",
     "watch-ts": "tsc -w",
-    "watch-non-ts": "cpx 'src/**/*.!(ts)' dist -w",
+    "watch-non-ts": "copyfiles -V -u 1 'src/**/*.!(ts)' dist --watch",
     "lint": "eslint ./src",
     "coverage": "npx nyc --reporter text npm run test",
     "start": "bin/buttress.sh",
@@ -41,7 +41,7 @@
   "dependencies": {
     "@buttress/api": "~3.0.0-50",
     "@buttress/snippets": "~1.0.0-25",
-    "@hashgraph/sdk": "~2.49.2",
+    "@hashgraph/sdk": "^2.24.2",
     "@socket.io/redis-adapter": "~7.2.0",
     "@socket.io/redis-emitter": "~5.1.0",
     "base64url": "~3.0.1",
@@ -78,8 +78,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.2.0",
     "@types/node-redis-pubsub": "^3.0.4",
-    "concurrently": "^8.2.2",
-    "cpx": "^1.5.0",
+    "copyfiles": "^2.4.1",
     "eslint": "^9.8.0",
     "eslint-config-google": "^0.14.0",
     "husky": "^8.0.3",
